# real-estate-sender-automation

./: .env.example  .gitignore  CODEX.md  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  cloudflare-deploy.yml  property-mailer.yml
data/: sample_properties.csv  sample_recipients.csv
docs/: architecture.md  ci-status.md  data-schema.md  operator-guide.md  security.md  setup-guide-trigger.md  setup-visual-guide.md  setup.md
property_mailer/: __main__.py  config.py  data_loader.py  drive_loader.py  local_state.py  models.py  orchestrator.py  render.py  sender_client.py  validation.py  worker_gateway.py
templates/: campaign.html.j2  campaign.txt.j2
tests/: test_orchestrator.py  test_validation.py
worker/: package.json  wrangler.toml
worker/migrations/: 0001_init.sql
worker/src/: index.ts
