, "UP017"[project]
name = "real-estate-sender-automation"
version = "0.1.0"
description = "Real estate property email automation using Google Drive, Sender.net, Cloudflare Worker, D1, and GitHub Actions."
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
